add web + vertex modules + refactor main ModelProvider interface + refactor json serializer